# Dj-Agent

./: .gitignore  README.md  eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
.github/workflows/: release.yml  windows-installer.yml
docs/: updates.md
python-engine/: requirements.txt  run.py  test_engine.py
python-engine/app/: __init__.py  analysis.py  database.py  integrations.py  main.py  models.py  runtime.py  scanner.py  service.py
scripts/: build-sidecar.ps1  build-windows.ps1  check-prerequisites.ps1  set-version.mjs  tauri.ps1  test-installer.ps1  test-sidecar.ps1  validate-sidecar-bundle.ps1
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/components/: LibraryView.tsx  PerformanceView.tsx  QueueView.tsx  SetBuilderView.tsx  SettingsView.tsx  Sidebar.tsx  StartupDiagnostics.tsx  TrackDetail.tsx  UpdatesPanel.tsx  Waveform.tsx
src/lib/: api.ts  format.ts  types.ts
tests/: project.test.mjs
