[package]
name = "dj-agent-desktop"
version = "0.1.0"
description = "Private local music analysis and set planning for DJs"
authors = ["DJ Agent"]
edition = "2021"

[lib]
name = "dj_agent_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
